<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobistudi</string>

    <string name="no_reply">暂无回复</string>
    <string name="data_load_faild_and_click_avatar_to_reload">数据加载失败，点击头像重试</string>
    <string name="have_no_more_data">已没有更多数据</string>
    <string name="can_not_up_yourself_reply">不能帮自己点赞</string>

    <string name="topic">话题</string>
    <string name="new_topic">发布话题</string>
    <string name="post_success">发布成功</string>
    <string name="title_empty_error_tip">标题要求10字以上</string>
    <string name="content_empty_error_tip">内容不能为空</string>

    <string name="user_detail">用户资料</string>
    <string name="recently_reply">最近回复</string>
    <string name="latest_post">最新发布</string>
    <string name="favorite_topics">收藏话题</string>
    <string name="navigation_badge_count_max">99+</string>

    <string name="load_more_finished">已经到底啦</string>
    <string name="load_more_failed">加载失败，点击重试</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="ok">好的</string>
    <string name="go_on">继续</string>

    <string name="author">作者</string>
    <string name="topic__">话题：%s</string>
    <string name="__floor">%d楼</string>
    <string name="reply___floor">回复：%d楼</string>
    <string name="create_at__">创建于：%s</string>
    <string name="score__">积分：%d</string>
    <string name="register_time__">注册时间：%s</string>
    <string name="__create">%s创建</string>
    <string name="__count_visit">%d次浏览</string>
    <string name="__count_reply">%d条回复</string>
    <string name="_slash_">/</string>
    <string name="_dot_">•</string>

    <string name="tab_top">置顶</string>
    <string name="tab_all">全部</string>
    <string name="tab_good">精华</string>
    <string name="tab_unknown">未知</string>
    <string name="tab_share">分享</string>
    <string name="tab_ask">问答</string>
    <string name="tab_job">招募</string>
    <string name="tab_dev">测试</string>

    <string name="notification">消息</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>

    <string name="click_avatar_to_login">点击头像登录</string>
    <string name="press_back_again_to_exit">再按一次退出</string>

    <string name="access_token_auth_error">Access Token 验证错误</string>
    <string name="access_token_format_error">Access Token 格式错误，应为 UUID</string>
    <string name="access_token_out_of_date">您的账号授权已经过期，您可能需要重新登录账户。</string>

    <string name="logout">注销</string>
    <string name="need_login_tip">该操作需要Github登录。是否现在登录？</string>
    <string name="logout_tip">确定要注销吗？</string>
    <string name="login_success">登录成功</string>
    <string name="relogin">重新登录</string>

    <string name="at_you_in_topic">在话题中@了您</string>
    <string name="at_you_in_reply">在回复中@了您</string>
    <string name="reply_your_topic">回复了您的话题</string>

    <string name="github_login">GitHub登录</string>

    <string name="current_version">当前版本</string>
    <string name="open_source_url">官方主页</string>
    <string name="open_source_url_content">https://www.mobistudi.com</string>
    <string name="about_cnode">Mobar社区</string>
    <string name="about_cnode_content">https://www.mobistudi.com/community</string>
    <string name="about_author">关于我们</string>
    <string name="about_author_content"> </string>
    <string name="advice_feedback">意见反馈</string>
    <string name="advice_feedback_content">给我们发送邮件</string>
    <string name="open_in_market">去商店评分</string>
    <string name="open_in_market_content">觉得赞就给个好评吧！</string>
    <string name="copyright">Copyright © 2018 mobistudi</string>

    <string name="no_market_install_in_system">系统中没有安装应用商店</string>
    <string name="no_browser_install_in_system">系统中没有安装浏览器</string>
    <string name="no_email_client_install_in_system">系统中没有安装邮件客户端</string>

    <string name="mark_all_read">全部标记为已读</string>
    <string name="notice">通知</string>
    <string name="receive_notification">接收消息推送</string>
    <string name="receive_notification_summary"> </string>
    <string name="theme">主题</string>
    <string name="theme_dark">夜间模式</string>
    <string name="topic_draft">保存草稿</string>
    <string name="topic_draft_summary">没有发布的话题内容会被保存</string>
    <string name="topic_sign">话题小尾巴</string>
    <string name="topic_sign_summary">开启后可以自定义</string>
    <string name="modify_topic_sign">设置小尾巴</string>
    <string name="modify_topic_sign_hint">来点酷炫的，不要写太多字喔&#8230;</string>
    <string name="default_topic_sign">默认尾巴</string>

    <string name="open_in_browser">在浏览器中打开</string>
    <string name="share">分享</string>
    <string name="send">发送</string>
    <string name="send_to_tab__">发布到分类：</string>

    <string name="create_topic_title_hint">标题，字数10字以上</string>
    <string name="create_topic_content_hint">说点什么吧&#8230;</string>

    <string name="title">标题</string>
    <string name="add_link">添加连接</string>
    <string name="link">连接</string>
    <string name="http__">http://</string>

    <string name="markdown_preview">Markdown预览</string>
    <string name="image_preview">查看图片</string>

    <string name="app_crash">程序崩溃</string>
    <string name="crash_log_tip">非常抱歉，程序运行过程中出现了一个无法避免的错误。您可以将该问题发送给开发者，此举将有助于改善应用体验。由此给您带来的诸多不便，我们深表歉意，敬请谅解。</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--login strings-->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">Mobar Community</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="login">LOGIN</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blog_detail">BlogDetailActivity</string>

    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">输入您的账号</string>
    <string name="prompt_password">密码 (未注册可以不填哦)</string>
    <string name="action_sign_in">登录/注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">请输入正确的账号信息</string>
    <string name="error_invalid_password">密码太短啦～</string>
    <string name="error_incorrect_password">密码不正确哦！</string>
    <string name="error_field_required">请输入账号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_sign_up">注册</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_all_courses">AllCourses</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_zone">个人空间</string>
    <string name="large_text">
        已经学习的课程\n
        我的知识结构\n

    </string>
    <string name="title_activity_friends">Friends</string>

    <string name="title_activity_learn">课程学习</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_first_page">FirstPage</string>

    <string name="title_activity_course_unit_map">CourseUnitMapActivity</string>
    <string name="title_activity_curese_detail">CureseDetailActivity</string>
    <string name="title_activity_personal_zone">PersonalZoneActivity</string>
    <string name="title_activity_history">HistoryActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_register">RegisterActivity</string>
    <string name="learnThis">我学这个</string>
    <string name="title_activity_study_progress_activitiy">StudyProgressActivitiy</string>

    <!-- Question TODO:-->
    <string name="next_problem">下一题</string>

</resources>
