<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/widgetBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_version"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                tools:text="0.0.0-alpha.0-build-0" />

        </LinearLayout>

        <View style="@style/AppWidget.DeepLine" />

        <LinearLayout
            android:id="@+id/btn_open_source_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_source_url"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/open_source_url_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <View style="@style/AppWidget.DeepLine" />

        <LinearLayout
            android:id="@+id/btn_about_cnode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_cnode"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/about_cnode_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <View style="@style/AppWidget.DeepLine" />

        <LinearLayout
            android:id="@+id/btn_about_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_author"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/about_author_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View style="@style/AppWidget.ShadowGap" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/widgetBackground"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btn_open_in_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/open_in_market"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/open_in_market_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

        <View style="@style/AppWidget.DeepLine" />

        <LinearLayout
            android:id="@+id/btn_advice_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/advice_feedback"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:maxLines="1"
                android:text="@string/advice_feedback_content"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <View style="@style/AppWidget.ShadowGap" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/copyright"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="12sp" />

</LinearLayout>
