<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_login_bg2"
    tools:context="czd.mobistudi.md.ui.activity.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        android:layout_centerInParent="true"
        android:id="@+id/cv">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:text="@string/login"
                android:textColor="#FFCC00"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>


            <RelativeLayout
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <Button
                    android:id="@+id/bt_go"
                    android:background="@drawable/login_bt_shape"
                    android:stateListAnimator="@drawable/login_state_list_animator_z"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/go"
                    android:textColor="#d3d3d3"
                    >
                </Button>
            </RelativeLayout>
            <TextView
                android:id="@+id/btn_github_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:drawableStart="@drawable/ic_github_grey600_24dp"
                android:drawableLeft="@drawable/ic_github_grey600_24dp"
                android:drawablePadding="8dp"
                android:text="@string/github_login"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                android:gravity="center_vertical"
                android:background="?attr/selectableItemBackground" />
            <!--<TextView-->
                <!--android:layout_marginTop="5dp"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:textColor="#9a9a9a"-->
                <!--android:textSize="12sp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/forgot_your_password"-->
                <!--/>-->
        </LinearLayout>
        </android.support.v7.widget.CardView>

</RelativeLayout>
