<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="chinaykc.mobistudi.Start.LoginActivity"
    android:background="@drawable/background">

    <!-- Login progress -->
    <RelativeLayout
        android:id="@+id/fl_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000">

        <VideoView
            android:id="@+id/vv_about"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerVertical="true"/>

        <LinearLayout
            android:id="@+id/tv_hide"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="#eee"
                android:rotation="45"
                android:layout_marginTop="-10dp"/>
            <TextView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="#eee"
                android:rotation="45"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="-10dp"/>
        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="#33333333">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:text="0000"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <EditText
                    android:id="@+id/passWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:text="0000"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#99ffffff"
                    android:background="@color/colorPrimary"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:id="@+id/tv_register"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/action_sign_up"/>
                <TextView
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/colorPrimary"
                    android:background="#99ffffff"
                    android:textSize="30sp"
                    android:gravity="center"
                    />
            </LinearLayout>


            <android.support.design.widget.TabLayout
                android:id="@+id/tb_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#99ffffff"
                app:tabTextColor="@color/colorPrimary"
                app:tabSelectedTextColor="#f60"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
